e2e/manifests/istio_prestart.yaml
# This file stores unchanged prestart resources used in the e2e
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/name: clusterrolebinding
    app.kubernetes.io/instance: htnn-istiod-rolebinding
    app.kubernetes.io/component: rbac
    app.kubernetes.io/created-by: htnn
    app.kubernetes.io/part-of: htnn
  name: htnn-istiod-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: controller-manager-role
subjects:
- kind: ServiceAccount
  name: istiod
  namespace: istio-system
